--- a/src/components/BannerPrincipal/BannerStyle.css
+++ b/src/components/BannerPrincipal/BannerStyle.css
@@ -75,9 +75,12 @@
 
 }
 
-@media (max-width: 767px) {}
+@media (max-width: 767px) {
+    
 
-@media (max-width: 418px) {
+}
+
+@media (max-width: 428px) {
     #container-principal-banner {
         height: 65rem;
         display: flex;
