--- a/src/components/NavBar/NavBarStyle.css
+++ b/src/components/NavBar/NavBarStyle.css
@@ -101,7 +101,7 @@
     }
 
     .navBar-logo-container {
-        width: 100%;
+        width: 100vw;
         padding: 1rem;
         text-align: center;
     }
@@ -111,7 +111,7 @@
     }
 
     .navBar-list-link {
-        width: 100%;
+        width: 100vw;
         padding-bottom:1rem ;
 
         justify-content: center;
@@ -119,7 +119,8 @@
     }
 
     .link-container {
-        gap: 16px;
+        gap: 12px;
+        justify-content: center;
     }
 
 
