--- a/src/components/BannerPrincipal/BannerStyle.css
+++ b/src/components/BannerPrincipal/BannerStyle.css
@@ -1,7 +1,8 @@
 /* BANNER PRINCIPAL */
 #container-principal-banner {
-    width: 100vw;
-    height: 462px;
+    max-width: 100%;
+    margin: 0 auto;
+    height: 72vh;
     display: flex;
 
 
@@ -66,6 +67,7 @@
 
 @media (max-width: 1024px) {
     #container-principal-banner {
+        max-width: 100%;
         height: 40rem;
     }
     .banner-left-text {
@@ -76,12 +78,14 @@
 }
 
 @media (max-width: 767px) {
-    
+
 
 }
 
 @media (max-width: 428px) {
     #container-principal-banner {
+        max-width: 100%;
+        margin: 0 auto;
         height: 65rem;
         display: flex;
         flex-direction: column;
