--- a/src/components/NavBar/NavBarStyle.css
+++ b/src/components/NavBar/NavBarStyle.css
@@ -1,10 +1,11 @@
 
 /* CONTAINER PRINCIPAL */
 .container-navBar {
-    width: 100vw;
+    width: 100%;
     height: 4.75rem ;
     display: flex;
     align-items: center;
+    justify-content: center;
     box-shadow: .5px .5px 5px   rgba(0, 0, 0, 0.281)
 }
 
@@ -32,9 +33,9 @@
 /* ESTILIZAÇÃO DA LISTA DE NAVEGAÇÃO */
 
 .navBar-list-link {
-    width: 50%;
+    width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: center;
 }
 
 
