--- a/src/components/NavBar/NavBarStyle.css
+++ b/src/components/NavBar/NavBarStyle.css
@@ -5,7 +5,7 @@
     height: 4.75rem ;
     display: flex;
     align-items: center;
-    box-shadow: .5px .5px 5px   rgba(0, 0, 0, 0.281);
+    box-shadow: .5px .5px 5px #00a316;
 }
 
 /* FIM */
