--- a/src/components/ProcessoCardLeft/CardLeft.css
+++ b/src/components/ProcessoCardLeft/CardLeft.css
@@ -1,4 +1,4 @@
-#container-card-right {
+#container-card-left {
     width: 80%;
     height: 500px;
     display: flex;
@@ -8,7 +8,7 @@
 }
 
 
-.card-right-description {
+.card-left-description {
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -16,16 +16,16 @@
     text-align: center;
 }
 
-.card-right-description>h2 {
+.card-left-description>h2 {
     padding: 12px;
 }
 
-.card-right-description>p {
-    line-height: 1.7;
+.card-left-description>p {
+    line-height: 1.5;
 }
 
 
-.card-right-img {
+.card-left-img {
     width: 30rem;
     border-radius: 10px;
 }
