--- a/src/components/Tratamento/TratamentoStyle.css
+++ b/src/components/Tratamento/TratamentoStyle.css
@@ -1,6 +1,8 @@
 .container__tratamento {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  min-height: 90vh;
+
 }
 
 /* DIV DE TEXTO RESIDUOS */
