--- a/src/components/ProcessoCardLeft/CardLeft.css
+++ b/src/components/ProcessoCardLeft/CardLeft.css
@@ -1,5 +1,5 @@
 #container-card-left {
-    width: 80%;
+    width: 90%;
     height: 500px;
     display: flex;
     align-items: center;
@@ -13,7 +13,8 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    text-align: center;
+    text-align: left;
+    margin-left: 1rem;
 }
 
 .card-left-description>h2 {
@@ -28,4 +29,19 @@
 .card-left-img {
     width: 30rem;
     border-radius: 10px;
+}
+
+
+
+/* RESPONSIVIDADE */
+
+@media (min-width: 378px) and (max-width: 768px) {
+    #container-card-left {
+        flex-wrap: wrap;
+    }
+
+    .card-left-description {
+        width: 100%;
+
+    }
 }
