--- a/src/components/ProcessoCardRight/CardRight.css
+++ b/src/components/ProcessoCardRight/CardRight.css
@@ -1,5 +1,5 @@
 #container-card-right {
-    width: 80%;
+    width: 90%;
     height: 500px;
     display: flex;
     align-items: center;
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    text-align: center;
+    text-align: left;
 }
 
 .card-right-description>h2 {
@@ -28,4 +28,18 @@
 .card-right-img {
     width: 30rem;
     border-radius: 10px;
+}
+
+
+/* RESPONSIVIDADE */
+
+@media (min-width: 378px) and (max-width: 768px) {
+    #container-card-right {
+        flex-wrap: wrap-reverse;
+    }
+
+    .card-right-description {
+        width: 100%;
+
+    }
 }
