--- a/src/components/ResiduoCard/ResiduoCard.css
+++ b/src/components/ResiduoCard/ResiduoCard.css
@@ -1,4 +1,5 @@
 #container-card-residuos {
+    position: relative;
     width: 14.4rem;
     height: 9.45rem;
     display: flex;
@@ -6,6 +7,7 @@
     align-items: center;
     justify-content: center;
     gap: 16px;
+    transition: all .2s ease-in-out;
 
 
     background: var(--secundary-color);
@@ -17,6 +19,32 @@
 
     border-radius: 15px;
 }
+
+
+#container-card-residuos:hover {
+    transform: scale(1.1);
+    box-shadow: 3px 4px 15px var(--primary-color);
+}
+
+
+
+#container-sobreposto {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    font-size: 11px;
+    text-align: center;
+
+    background: green;
+}
+
+
+
+
+
+
 
 
 .residuo-img {
