--- a/src/components/Tratamento/TratamentoStyle.css
+++ b/src/components/Tratamento/TratamentoStyle.css
@@ -8,6 +8,7 @@
 /* DIV DE TEXTO RESIDUOS */
 .title-residuos {
   width: 100vw;
+  max-width: 1980px;
   height: 22vh;
   display: flex;
   flex-direction: column;
